test/error/parser_files/type_as_binding05.err
File "parser_files/type_as_binding05.st", line 1, characters 7-11:
1 | f (x, type) := g ().
          ^^^^
Error: Syntax error.
Hint: Is not a correct binding.
